Added an application (O2ML editor) to start menu.

--- a/etc/conf/startMenu.conf
+++ b/etc/conf/startMenu.conf
@@ -25,6 +25,11 @@
           iconClass => 'O2CMS::Backend::Gui::Statistics::GoogleAnalytics',
           action    => '/o2cms/Statistics-GoogleAnalytics/chooseAccount',
         },
+        {
+          name   => 'o2.applicationNames.o2Tools.o2mlTest',
+          icon   => '/images/system/editscript_24.gif',
+          action => '/o2/System-Test/o2mlForm',
+        },
       ],
     },
     {
