--- a/var/resources/en/o2/applicationNames.conf
+++ b/var/resources/en/o2/applicationNames.conf
@@ -5,6 +5,7 @@
   o2ToolsFolder  => 'O2 Utils',
   o2Tools => {
     o2Analytics => 'Google Analytics',
+    o2mlTest    => 'Test HTML/O2ML tags',
   },
   o2SystemFolder => 'O2 System',
   o2System => {
