--- a/var/resources/nb_NO/o2/applicationNames.conf
+++ b/var/resources/nb_NO/o2/applicationNames.conf
@@ -5,6 +5,7 @@
   o2ToolsFolder  => 'O2 Verktøy',
   o2Tools => {
     o2Analytics => 'Google Analytics',
+    o2mlTest    => "Test HTML/O2ML tag'er",
   },
   o2SystemFolder => 'O2 System',
   o2System => {
