Moving search config values from O2-Framework.

--- a/etc/conf/o2.conf
+++ b/etc/conf/o2.conf
@@ -1,8 +1,15 @@
 {
   backendLocales => [qw(en_US)],
-  
+
   adminRootUrl      => '%%o2.siteRootUrl%%/o2cms',
   adminImageRootUrl => '%%o2.siteRootUrl%%/images',
-  
+
   onFailedTransactionSendEmailTo => '',
+
+  search => {
+    swishBin      => '/usr/bin/swish-e',
+    configsPath   => $ENV{O2CUSTOMERROOT} . '/var/search/indexConfigs',
+    documentsPath => $ENV{O2CUSTOMERROOT} . '/var/search/documents',
+    indexesPath   => $ENV{O2CUSTOMERROOT} . '/var/search/indexes',
+  },
 };
